# plover_open_url

./: LICENSE.txt  README.md  README.rst  plover_open_url.py  setup.cfg
