[metadata]
name = plover_open_url
version = 0.0.2
description = Command plugin for Plover to open a URL
long_description = file: README.rst
author = Nick Markopoulos
author_email = nsmarkop@gmail.com
license = MIT
url = https://github.com/nsmarkop/plover_open_url
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
py_modules =
    plover_open_url

[options.entry_points]
plover.command =
    open_url = plover_open_url:open_url
